# her

./: .envrc.example  .gitignore  CLAUDE.md  Makefile  pyproject.toml
apps/agent/: __init__.py  anonymize.py  core.py  gemini.py  multimodal.py  recall.py  world_context.py
apps/consolidator/: __init__.py  __main__.py  extractor.py  promoter.py  runner.py
apps/daemon/: __init__.py  __main__.py  lifecycle.py  logrotate.py  runner.py
apps/memory/: __init__.py  schema.sql  store.py
apps/presence/: __init__.py  __main__.py  remote_bus.py  server.py
apps/proactive/: __init__.py  __main__.py  activity.py  engine.py  triggers.py
apps/settings/: __init__.py  consent.py  store.py
apps/tools/: __init__.py  calendar_helper.swift  calendar_mac.py  news.py  stocks.py  translate.py  weather.py
apps/web/: __init__.py  __main__.py  eventbus.py  server.py
examples/: persona.md
infra/launchd/: com.her.assistant.plist.template  com.her.consolidator.plist.template
scripts/: diagnose_mic.py  first_run.py  replay.py  seed_family.py  smoke_embedding.py  smoke_llm.py  smoke_phase2.py  smoke_voice.py
tests/: conftest.py
tests/fixtures/: dialog_001.jsonl  dialog_002_attachment.jsonl  dialog_003_followup.jsonl  sample_attachment.txt
tests/unit/: test_agent_anonymize.py  test_agent_core.py  test_agent_gemini.py  test_agent_multimodal.py  test_agent_recall.py  test_agent_remember.py  test_agent_world_context.py  test_consolidator_extractor.py  test_consolidator_promoter.py  test_consolidator_runner.py  test_daemon_lifecycle.py  test_daemon_logrotate.py  test_memory_attachments.py  test_memory_episodes.py  test_memory_events.py  test_memory_facts.py  test_memory_people.py  test_memory_preferences.py  test_memory_recall.py  test_memory_schema.py  test_memory_sessions.py  test_memory_v1_migration.py  test_presence_eventbus.py  test_presence_publishers.py  test_presence_remote_bus.py  test_presence_server.py  test_proactive_engine.py  test_proactive_triggers.py  test_recall_filter.py  test_replay_loader.py  test_replay_phase2.py  test_settings_consent.py  test_settings_store.py  test_text_attachments.py  test_text_repl.py  test_text_repl_attachments.py  test_tools_calendar_mac.py  test_tools_news.py  (+13 more)
(+41 files in other folders)
